--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@types/node": "20.12.12",
     "@types/react": "18.3.2",
     "@types/react-dom": "18.3.0",
+    "antd": "^5.17.2",
     "autoprefixer": "10.4.19",
     "eslint": "8.57.0",
     "eslint-config-next": "14.2.3",
@@ -19,6 +20,7 @@
     "postcss": "8.4.38",
     "react": "18.3.1",
     "react-dom": "18.3.1",
+    "react-icons": "^5.2.1",
     "tailwindcss": "3.4.3",
     "typescript": "5.4.5"
   }
