--- a/package.json
+++ b/package.json
@@ -20,8 +20,10 @@
     "postcss": "8.4.38",
     "react": "18.3.1",
     "react-dom": "18.3.1",
+    "react-hook-form": "^7.51.4",
     "react-icons": "^5.2.1",
     "tailwindcss": "3.4.3",
-    "typescript": "5.4.5"
+    "typescript": "5.4.5",
+    "zod": "^3.23.8"
   }
 }
