--- a/.gitignore
+++ b/.gitignore
@@ -18,6 +18,8 @@
 # misc
 .DS_Store
 *.pem
+gh-pages
+gh-pages.pub
 
 # debug
 npm-debug.log*
@@ -27,6 +29,7 @@ yarn-error.log*
 # local env files
 .env
 .env*.local
+
 
 # vercel
 .vercel
