--- a/.github/workflows/image-production.yml
+++ b/.github/workflows/image-production.yml
@@ -13,10 +13,14 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
-        - uses: actions/checkout@v3
-        - name: Build the Docker image
-          run: docker build -t ${{ secrets.DOCKER_USERNAME }}/ebent-deploy:latest .
-        - name: Push the Docker image
-          run: |
-            docker login -u ${{ secrets.DOCKER_USERNAME }} -p ${{ secrets.DOCKER_PASSWORD }}
-            docker push ${{ secrets.DOCKER_USERNAME }}/ebent-deploy:latest
+      - uses: actions/checkout@v3
+
+      # Build the Docker image with the correct tag format
+      - name: Build the Docker image
+        run: docker build -t ${{ secrets.DOCKER_USERNAME }}/ebent-deploy:latest .
+
+      # Push the Docker image to Docker Hub
+      - name: Push the Docker image
+        run: |
+          docker login -u ${{ secrets.DOCKER_USERNAME }} -p ${{ secrets.DOCKER_PASSWORD }}
+          docker push ${{ secrets.DOCKER_USERNAME }}/ebent-deploy:latest
